--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amarante</item>
         <item>@font/bangers</item>
+        <item>@font/bungee_shade</item>
+        <item>@font/chicle</item>
     </array>
 </resources>
