--- a/app/src/main/res/anim/in_fade.xml
+++ b/app/src/main/res/anim/in_fade.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/linear_interpolator">
     <alpha
-        android:duration="2000"
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromAlpha="0.1"
         android:toAlpha="1.0">
     </alpha>
