--- a/app/src/main/res/anim/to_right.xml
+++ b/app/src/main/res/anim/to_right.xml
@@ -4,6 +4,7 @@
     <translate
         android:fromXDelta="100%p"
         android:toXDelta="0"
-        android:duration="500"/>
+
+        android:duration="@android:integer/config_mediumAnimTime"/>
 
 </set>
