--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,12 +132,15 @@ tools:layout_editor_absoluteX="0dp">
         app:boxStrokeWidth="2dp"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
-        app:startIconDrawable="@drawable/ic_email">
+        app:startIconDrawable="@drawable/ic_email"
+
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -166,7 +169,7 @@ tools:layout_editor_absoluteX="0dp">
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_acessLogin"
+        android:id="@+id/btn_accessLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
