--- a/app/src/main/res/layout/activity_bottom_sheet_signup.xml
+++ b/app/src/main/res/layout/activity_bottom_sheet_signup.xml
@@ -57,22 +57,14 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-   <!-- <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        android:background="#000000"
-        />-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tf_signupCountry"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="2dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="12dp"
         android:elevation="1dp"
         android:hint="Country"
         app:boxStrokeColor="#9CB9BF"
@@ -80,7 +72,7 @@
         app:boxStrokeWidth="2dp"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
-        app:startIconDrawable="@drawable/ic_email">
+        app:startIconDrawable="@drawable/ic_place_country">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -92,11 +84,11 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tf_signupCity"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="10dp"
         android:elevation="1dp"
         android:hint="City"
         app:boxStrokeColor="#9CB9BF"
@@ -114,18 +106,9 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="3dp"
-        android:layout_marginTop="6dp"
-        >
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tf_signupSector"
-            android:layout_weight="1"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Sector"
@@ -134,8 +117,9 @@
             app:boxStrokeWidth="2dp"
             app:endIconMode="clear_text"
             app:errorEnabled="true"
-            android:layout_marginHorizontal="2dp"
-            app:startIconDrawable="@drawable/ic_email"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="10dp"
+            app:startIconDrawable="@drawable/ic_sector"
             android:elevation="1dp"
             >
 
@@ -148,18 +132,18 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tf_signupStreet"
-            android:layout_weight="1"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="2dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="10dp"
             android:hint="Street"
             app:boxStrokeColor="#9CB9BF"
             app:boxStrokeErrorColor="#B31433"
             app:boxStrokeWidth="2dp"
             app:endIconMode="clear_text"
             app:errorEnabled="true"
-            app:startIconDrawable="@drawable/ic_city"
+            app:startIconDrawable="@drawable/ic_street"
             android:elevation="1dp"
             >
 
@@ -172,65 +156,55 @@
 
 
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tf_signupNumberAptHouse"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="6dp"
-        android:layout_marginHorizontal="3dp"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="10dp"
+        android:hint="No.Apt/House"
+        app:boxStrokeColor="#9CB9BF"
+        app:boxStrokeErrorColor="#B31433"
+        app:boxStrokeWidth="2dp"
+        app:endIconMode="clear_text"
+        app:errorEnabled="true"
+        app:startIconDrawable="@drawable/ic_send_postal_code"
+        android:elevation="1dp"
         >
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tf_signupStreet_number"
-            android:layout_weight="1"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+        <com.santalu.maskedittext.MaskEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="2dp"
-            android:hint="No. Apt./House"
-            app:boxStrokeColor="#9CB9BF"
-            app:boxStrokeErrorColor="#B31433"
-            app:boxStrokeWidth="2dp"
-            app:endIconMode="clear_text"
-            app:errorEnabled="true"
-            app:startIconDrawable="@drawable/ic_city"
-            android:elevation="1dp"
-            >
+            android:inputType="phone"
+            app:met_mask="#####" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tf_signupCodigo_postal"
-            android:layout_weight="1"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="2dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="10dp"
             android:hint="Postal Code"
             app:boxStrokeColor="#9CB9BF"
             app:boxStrokeErrorColor="#B31433"
             app:boxStrokeWidth="2dp"
             app:endIconMode="clear_text"
             app:errorEnabled="true"
-            app:startIconDrawable="@drawable/ic_city"
+            app:startIconDrawable="@drawable/ic_send_postal_code"
             android:elevation="1dp"
             >
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.santalu.maskedittext.MaskEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="phone"
+                app:met_mask="#####" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     <Button
