--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorError">#910606</color>
+    <color name="colorSuccess">#22B24F</color>
     <color name="top_color_azulejo_suplier">#495AAB</color>
 </resources>
