--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screenSuplier.fragments_second.FragmentOrder">
+    tools:context=".screenSuplier.fragments_second.FragmentOrder"
+    android:background="#EBEEF1"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
