--- a/app/src/main/res/menu/menu_top_search.xml
+++ b/app/src/main/res/menu/menu_top_search.xml
@@ -5,6 +5,7 @@
     <item android:id="@+id/action_search"
         android:title="Search"
         android:icon="@drawable/ic_search"
+        android:iconTint="#FFFFFF"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
