Funcionalidades del proyecto finalizadas

--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -124,7 +124,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:visibility="gone"
             android:id="@+id/btn_addCategory"
             android:layout_width="wrap_content"
