--- a/app/src/main/res/layout/activity_second_suplier.xml
+++ b/app/src/main/res/layout/activity_second_suplier.xml
@@ -27,11 +27,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:text="Home"
+                android:visibility="gone"
+                android:text="Setting"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
-                app:icon="@drawable/ic_flecha_back"
+                app:icon="@drawable/ic_setting"
                 app:iconTint="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,15 +54,13 @@
                 android:id="@+id/title_second_main_suplier"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="6dp"
-                android:layout_marginRight="6dp"
                 android:paddingHorizontal="10dp"
                 android:text="Category"
                 android:textColor="#F7F8FF"
                 android:textSize="22sp"
                 app:fontFamily="@font/chicle"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.526" />
 
