--- a/app/src/main/res/layout/activity_edit_and_delete_product.xml
+++ b/app/src/main/res/layout/activity_edit_and_delete_product.xml
@@ -219,7 +219,7 @@
 
 
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/btn_editProduct_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
