--- a/app/src/main/res/layout/activity_recovery_password.xml
+++ b/app/src/main/res/layout/activity_recovery_password.xml
@@ -131,6 +131,7 @@
         app:boxStrokeWidth="2dp"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
+        app:counterEnabled="true"
         app:startIconDrawable="@drawable/ic_email"
 
         >
