--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -32,15 +32,26 @@
         app:shapeAppearance="@style/Widget.MaterialComponents.Button"
         android:paddingLeft="14dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerCompany_category"
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_addCompany_category" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_addCompany_category"
+        >
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerCompany_category"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    />
+
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
