--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorError">#910606</color>
     <color name="colorSuccess">#22B24F</color>
+    <color name="statepending">#FFAB00</color>
+    <color name="statepaid">#08B24F</color>
     <color name="top_color_azulejo_suplier">#495AAB</color>
 </resources>
