--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amarante</item>
+        <item>@font/artifika</item>
         <item>@font/bangers</item>
         <item>@font/bungee_shade</item>
         <item>@font/chicle</item>
